--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ plot(modelFit.rf$finalModel)</code></pre>
 </div>
 <div id="discussion" class="section level1">
 <h1><span class="header-section-number">7</span> Discussion</h1>
-<p>All features data utilized were numerical data from accelerometers etc.</p>
+<p>Features data were numerical data from accelerometers etc.</p>
 <ul>
 <li>Data were cleaned as discussed above</li>
 </ul>
